--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<div class="content">
 
-		<!-- <div class="main">
+		<div class="main">
 			<div class="main__header">Главное</div>
 			<div class="main__block">
 				<div class="main__block__left">
@@ -71,10 +71,10 @@
 			</div>
 
 		</div>
- -->
 
 
-<!-- 
+
+
 
 		<div class="script">
 			<div class="script__header">Избранные сценарии<div class="script__header__nav"><img class="left_arrow" src="img/arrow@1x.png"><img class="right_arrow" src="img/arrow@1x.png"></div></div>
@@ -165,7 +165,7 @@
 
 				</div>
 
-		</div> -->
+		</div>
 
 
 
@@ -302,7 +302,7 @@
 	</div>
 
 
-	<!-- <footer>
+	<footer>
 		<div class="footer">
 			<ul class="footer__menu">
 				<li class="footer__menu__item"><a href="#">Помощь</a></li>
@@ -313,7 +313,7 @@
 			</ul>
 			
 		</div>	
-	</footer> -->
+	</footer>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -328,7 +328,7 @@
 	});
 
 	// document.getElementsByClassName('devices__blocks__list')[0].style = "transform: translate(0px);";
-	// $('.devices__blocks__list')[0].style.left = "0";
+	$('.devices__blocks__list')[0].style.left = "0";
 
 	$('.devices__header__nav__right_arrow').on('click', function(e) {
 		// e.preventDefault();
