--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href='styles.css' rel='stylesheet' type='text/css'>
 	<title>Document</title>
 </head>
-<body>
+<body style="display: none;">
 	<header>
 		<div class="header">
 			<div class="header__logo">
@@ -77,8 +77,9 @@
 
 
 		<div class="script">
-			<div class="script__header">Избранные сценарии<div class="script__header__nav"><img class="left_arrow" src="img/arrow@1x.png"><img class="right_arrow" src="img/arrow@1x.png"></div></div>
+			<div class="script__header">Избранные сценарии<div class="script__header__nav"><img class="script__header__nav__left_arrow" src="img/arrow@1x.png"><img class="script__header__nav__right_arrow" src="img/arrow@1x.png"></div></div>
 				<div class="script__blocks">
+				<div class="script__blocks__list__horizontal">
 					<ul class="script__blocks__list">
 						<li class="script__blocks__item">
 							<div class="script__blocks__item__content">
@@ -161,8 +162,138 @@
 								</div>
 							</div>
 						</li>
+						</ul>
+						<ul class="script__blocks__list">
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_sun_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Выключить весь свет в доме и во дворе</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_scheduled@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Я ухожу</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item script__blocks__item__active">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_sun_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Выключить свет в коридоре</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_temperature_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Набрать горячую ванну</div>
+									<div class="script__blocks__item__describe">Начнет охлаждать в 18:00</div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_temperature_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Сделать пол теплым во всей квартире</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_sun_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Выключить весь свет в доме и во дворе</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_scheduled@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Я ухожу</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_sun_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Выключить свет в коридоре</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_temperature_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Набрать горячую ванну</div>
+									<div class="script__blocks__item__describe">Начнет охлаждать в 18:00</div>
+								</div>
+							</div>
+						</li>
 					</ul>
-
+					<ul class="script__blocks__list">
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_sun_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Выключить весь свет в доме и во дворе</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_scheduled@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Я ухожу</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item script__blocks__item__active">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_sun_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Выключить свет в коридоре</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_temperature_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Набрать горячую ванну</div>
+									<div class="script__blocks__item__describe">Начнет охлаждать в 18:00</div>
+								</div>
+							</div>
+						</li>
+						<li class="script__blocks__item">
+							<div class="script__blocks__item__content">
+								<img class="script__blocks__item__img" src="img/icon_temperature_2@1x.png">
+								<div class="script__blocks__item__content__text">
+									<div class="script__blocks__item__name">Сделать пол теплым во всей квартире</div>
+									<div class="script__blocks__item__describe"></div>
+								</div>
+							</div>
+						</li>
+						</ul>
+					</div>
 				</div>
 
 		</div>
@@ -327,73 +458,83 @@
 		}
 	});
 
-	// document.getElementsByClassName('devices__blocks__list')[0].style = "transform: translate(0px);";
+
+
+	// 2 слайдер
 	$('.devices__blocks__list')[0].style.left = "0";
 
 	$('.devices__header__nav__right_arrow').on('click', function(e) {
-		// e.preventDefault();
-		// css = document.getElementsByClassName('devices__blocks__list')[0].style.transform;
-		// var result = css.match(/-?\d+/);
-		// var value = parseInt(result[0]) - 215;
 		if ($(window).width()*0.975 <= (parseInt($('.devices__blocks__list').width()) + parseInt($('.devices__blocks__list')[0].style.left))){
 			$('.devices__blocks__list').animate({left: parseInt($('.devices__blocks__list')[0].style.left)-215}, 0);
 		}
-		// document.getElementsByClassName('devices__blocks__list')[0].style =
-		// $('.devices__blocks__list').toggleClass('devices__blocks__list__right__click');
 	});
 	$('.devices__header__nav__left_arrow').on('click', function(e) {
-		// e.preventDefault();
-		// css = document.getElementsByClassName('devices__blocks__list')[0].style.transform;
-		// var result = css.match(/-?\d+/);
-		// var value = parseInt(result[0]) + 215;
 		if (!(parseInt($('.devices__blocks__list')[0].style.left) == 0)){
 			$('.devices__blocks__list').animate({left: parseInt($('.devices__blocks__list')[0].style.left)+215}, 0);
 		}
-		// document.getElementsByClassName('devices__blocks__list')[0].style =
-		// $('.devices__blocks__list').toggleClass('devices__blocks__list__left__click');
 	});
 
-	if ($('.devices__blocks__list').width() < $('body').width()*0.975){
+
+
+	// 1 слайдер
+	$('.script__blocks__list__horizontal')[0].style.left = "0";
+
+	var currentScriptSlide = 1;
+
+
+	$('.script__header__nav__right_arrow').on('click', function(e) {
+		if (currentScriptSlide != $('.script__blocks__list__horizontal').children().length){
+			currentScriptSlide++;
+			$('.script__blocks__list__horizontal').animate({left: parseInt($('.script__blocks__list__horizontal')[0].style.left)-$('.script__blocks__list__horizontal').width()/$('.script__blocks__list__horizontal').children().length}, 0);
+		}
+	});
+	$('.script__header__nav__left_arrow').on('click', function(e) {
+		if (currentScriptSlide != 1){
+			currentScriptSlide--;
+			$('.script__blocks__list__horizontal').animate({left: parseInt($('.script__blocks__list__horizontal')[0].style.left)+$('.script__blocks__list__horizontal').width()/$('.script__blocks__list__horizontal').children().length}, 0);
+		}
+	});
+
+
+
+
+	if ($('.devices__blocks__list').width() > $('body').width()*0.975){
 		$('.devices__header__nav').hide();
 	}
 
-	if ($('.script__blocks__list').width() < $('body').width()*0.975){
+	if ($('.script__blocks__list').width() > $('body').width()*0.4){
 		$('.script__header__nav').hide();
 	}
 
+	document.getElementsByTagName("body")[0].style.display = "";
+
+	$(window).resize(function(){
+		
+	 	if($(window).width() > 840){
+	 		$(".script__blocks__list__horizontal").width($(".script__blocks__list__horizontal").children().length*100 + "%");
+	 	} else {
+	 		// $(".script__blocks__list__horizontal").width(parseInt($(".script__blocks__list").children().length*220) + "px");
+	 		// $(".script__blocks").width(parseInt($(".script__blocks__list").children().length*220) + "px");
+	 		for (var i = 0; i < $(".script__blocks__list__horizontal").children().length; i++){
+	 		  $($('.script__blocks__list')[i]).css("min-width", $($('.script__blocks__list')[i]).children().length*215 + "px");
+	 		  if (i == $(".script__blocks__list__horizontal").children().length - 1){
+	 		  	$($('.script__blocks__list')[i]).css("min-width", $($('.script__blocks__list')[i]).width()-20);
+	 		  }
+			}
+	 	}
+	});
+
+	window.onresize = $(window).resize();
+
+
+	
 
 
 </script>
 
 
-<script>
-</script>
 
 
-<script>
-    var slideWidth = 215;  //Ширина одного слайда
-    var slideTimer;        //Интервал смены кадров
- 
-    /*Устанавливаем ширину списка
-    *равную произведению ширины одного слайда на общее кол-во слайдов
-    *чтобы он вытянулся в одну строку*/
-    // $('.devices__blocks__list').width($('.devices__blocks__list').children().length * slideWidth);
-    /*задаем временной интервал*/
-    // sliderTimer=setInterval(nextSlide,5000);
-
-
-    
-/*функция, сменяющая слайды каждую секунду*/
-function nextSlide(){
-    var currentSlide=parseInt($('.devices__blocks__list').data('current'));  //определяем текущий слайд
-    currentSlide++;  //увеличиваем его значение
-    if (!(currentSlide>=$('.devices__blocks__list').children().length)) //перематываем к началу, если слайд последний
-    {
-        $('.devices__blocks__list').animate({left: -currentSlide*slideWidth},300).data('current',currentSlide);
-    } 
-    
-}
-</script>
 
  
 
